add hitcound and popular blogs

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
                                                         <a href="{% url 'contact-page' %}">Contact</a>
                                                     </li>
                                                     <li class="mil-up">
-                                                        <a href="blog.html">Blog</a>
+                                                        <a href="{% url 'blog-page' %}">Blog</a>
                                                     </li>
                                                 </ul>
                                             </nav>
