--- a/templates/blog.html
+++ b/templates/blog.html
@@ -211,46 +211,28 @@
                             </div>
                         </div>
                         <div class="row">
+                            {% for blog in popular_blogs %}
                             <div class="col-lg-6">
 
-                                <a href="publication.html" class="mil-blog-card mil-mb-60">
+                                <a href="{% url 'blog-detail-page' blog.slug %}" class="mil-blog-card mil-mb-60">
                                     <div class="mil-cover-frame mil-up">
-                                        <img src="img/blog/1.jpg" alt="cover">
+                                        <img src="{{blog.image.url}}" alt="cover">
                                     </div>
                                     <div class="mil-post-descr">
                                         <div class="mil-labels mil-up mil-mb-30">
-                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
-                                            <div class="mil-label mil-upper">may 24 2023</div>
+                                            <div class="mil-label mil-upper mil-accent">{{blog.category}}</div>
+                                            <div class="mil-label mil-upper">{{blog.created_date}}</div>
+                                            <div class="mil-label mil-upper">👁️‍🗨️ {{blog.hit_count.hits}}</div>
                                         </div>
-                                        <h4 class="mil-up mil-mb-30">How to Become a Graphic Designer in 10 Simple Steps</h4>
-                                        <p class="mil-post-text mil-up mil-mb-30">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius sequi commodi dignissimos optio, beatae, eos necessitatibus nisi. Nam cupiditate consectetur nostrum qui! Repellat natus nulla, nisi aliquid, asperiores impedit tempora sequi est reprehenderit cumque explicabo, dicta. Rem nihil ullam totam ea voluptas quibusdam repudiandae id ut at iure! Totam, a!</p>
-                                        <div class="mil-link mil-dark mil-arrow-place mil-up">
+                                        <h4 class="mil-up mil-mb-30">{{blog.title}}</h4>
+                                        <p class="mil-post-text mil-up mil-mb-30">{{blog.content | safe | truncatewords:20 }}</p>                                        <div class="mil-link mil-dark mil-arrow-place mil-up">
                                             <span>Read more</span>
                                         </div>
                                     </div>
                                 </a>
-
+                                
                             </div>
-                            <div class="col-lg-6">
-
-                                <a href="publication.html" class="mil-blog-card mil-mb-60">
-                                    <div class="mil-cover-frame mil-up">
-                                        <img src="img/blog/2.jpg" alt="cover">
-                                    </div>
-                                    <div class="mil-post-descr">
-                                        <div class="mil-labels mil-up mil-mb-30">
-                                            <div class="mil-label mil-upper mil-accent">TECHNOLOGY</div>
-                                            <div class="mil-label mil-upper">may 24 2023</div>
-                                        </div>
-                                        <h4 class="mil-up mil-mb-30">16 Best Graphic Design Online and Offline Courses</h4>
-                                        <p class="mil-post-text mil-up mil-mb-30">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius sequi commodi dignissimos optio, beatae, eos necessitatibus nisi. Nam cupiditate consectetur nostrum qui! Repellat natus nulla, nisi aliquid, asperiores impedit tempora sequi est reprehenderit cumque explicabo, dicta. Rem nihil ullam totam ea voluptas quibusdam repudiandae id ut at iure! Totam, a!</p>
-                                        <div class="mil-link mil-dark mil-arrow-place mil-up">
-                                            <span>Read more</span>
-                                        </div>
-                                    </div>
-                                </a>
-
-                            </div>
+                            {% endfor %}
                         </div>
                     </div>
                 </section>
@@ -277,9 +259,9 @@
                             </div>
                         </div>
                         <div class="row">
-                            {% for blog in blogs %}
+                            {% for blog in page_obj %}
                             <div class="col-lg-12">
-                                <a href="{% url 'blog-detail-page' blog.id %}" class="mil-blog-card mil-blog-card-hori mil-more mil-mb-60">
+                                <a href="{% url 'blog-detail-page' blog.slug %}" class="mil-blog-card mil-blog-card-hori mil-more mil-mb-60">
                                     <div class="mil-cover-frame mil-up">
                                         <img src="{{blog.image.url}}" alt="cover">
                                     </div>
@@ -287,8 +269,9 @@
                                         <div class="mil-labels mil-up mil-mb-30">
                                             <div class="mil-label mil-upper mil-accent">{{blog.category}}</div>
                                             <div class="mil-label mil-upper">{{blog.created_date}}</div>
+                                            <div class="mil-label mil-upper">👁️‍🗨️ {{blog.hit_count.hits}}</div>
                                         </div>
-                                        <h3 class="mil-up mil-mb-30">{{blog.title}}| {{blog.hit_count.hits}}</h3>
+                                        class="mil-up mil-mb-30">{{blog.title |truncatewords:4}}
                                         {{blog.content | safe | truncatewords:20 }}
                                         
                                     </div>
@@ -298,12 +281,36 @@
                             {% endfor %}
                             <div class="col-lg-12">
                                 <div class="mil-pagination">
-                                    <a href="blog-inner.html" class="mil-pagination-btn mil-active">1</a>
-                                    <a href="blog-inner.html" class="mil-pagination-btn">2</a>
+                                    {% for p in page_count %}
+                                    
+                                    {% if p == page %}
+                                    <a href="?page={{ p }}" class="mil-pagination-btn mil-active">{{p}}</a>
+                                    {% else %}
+                                    <a href="?page={{ p }}" class="mil-pagination-btn ">{{p}}</a>
+                                    {% endif %}
+                                    <!-- <a href="blog-inner.html" class="mil-pagination-btn">2</a>
                                     <a href="blog-inner.html" class="mil-pagination-btn">3</a>
                                     <a href="blog-inner.html" class="mil-pagination-btn">4</a>
-                                    <a href="blog-inner.html" class="mil-pagination-btn">5</a>
+                                    <a href="blog-inner.html" class="mil-pagination-btn">5</a> -->
+                                    {% endfor %}
                                 </div>
+                                <!-- <div class="pagination">
+                                    <span class="step-links">
+                                        {% if page_obj.has_previous %}
+                                            <a href="?page=1">&laquo; first</a>
+                                            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                                        {% endif %}
+                                
+                                        <span class="current">
+                                            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                                        </span>
+                                
+                                        {% if page_obj.has_next %}
+                                            <a href="?page={{ page_obj.next_page_number }}">next</a>
+                                            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                                        {% endif %}
+                                    </span>
+                                </div> -->
                             </div>
                         </div>
                     </div>
