--- a/templates/home.html
+++ b/templates/home.html
@@ -588,7 +588,7 @@
                             {% for blog in popular_blogs %}
                             <div class="col-lg-6">
 
-                                <a href="{% url 'blog-detail-page' blog.pk %}" class="mil-blog-card mil-mb-60">
+                                <a href="{% url 'blog-detail-page' blog.slug %}" class="mil-blog-card mil-mb-60">
                                     <div class="mil-cover-frame mil-up">
                                         <img src="{{blog.image.url}}" alt="cover">
                                     </div>
@@ -596,10 +596,10 @@
                                         <div class="mil-labels mil-up mil-mb-30">
                                             <div class="mil-label mil-upper mil-accent">{{blog.category}}</div>
                                             <div class="mil-label mil-upper">{{blog.created_date}}</div>
+                                            <div class="mil-label mil-upper">👁️‍🗨️ {{blog.hit_count.hits}}</div>
                                         </div>
                                         <h4 class="mil-up mil-mb-30">{{blog.title}}</h4>
-                                        <p class="mil-post-text mil-up mil-mb-30">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius sequi commodi dignissimos optio, beatae, eos necessitatibus nisi. Nam cupiditate consectetur nostrum qui! Repellat natus nulla, nisi aliquid, asperiores impedit tempora sequi est reprehenderit cumque explicabo, dicta. Rem nihil ullam totam ea voluptas quibusdam repudiandae id ut at iure! Totam, a!</p>
-                                        <div class="mil-link mil-dark mil-arrow-place mil-up">
+                                        <p class="mil-post-text mil-up mil-mb-30">{{blog.content | safe | truncatewords:20 }}</p>                                        <div class="mil-link mil-dark mil-arrow-place mil-up">
                                             <span>Read more</span>
                                         </div>
                                     </div>
