--- a/templates/base.html
+++ b/templates/base.html
@@ -38,13 +38,6 @@
 
                                     <div class="mil-muted mil-logo mil-up mil-mb-30">Ashley.</div>
 
-                                    <p class="mil-light-soft mil-up mil-mb-30">Subscribe our newsletter:</p>
-
-                                    <form class="mil-subscribe-form mil-up">
-                                        <input type="text" placeholder="Enter our email">
-                                        <button type="submit" class="mil-button mil-icon-button-sm mil-arrow-place"></button>
-                                    </form>
-
                                 </div>
                                 <div class="col-md-7 col-lg-6">
                                     <div class="row justify-content-end">
@@ -52,20 +45,23 @@
 
                                             <nav class="mil-footer-menu mil-mb-60">
                                                 <ul>
-                                                    <li class="mil-up mil-active">
-                                                        <a href="{% url 'home-page' %}">Home</a>
+                                                    <li class="mil-has-children">
+                                                        <a href="{% url 'home-page' %}">Homepage</a>
                                                     </li>
-                                                    <li class="mil-up">
-                                                        <a href="portfolio-1.html">Portfolio</a>
+                                                    <li class="mil-has-children">
+                                                        <a href="{% url 'portfolio-page' %}">Portfolio</a>
                                                     </li>
-                                                    <li class="mil-up">
-                                                        <a href="services.html">Services</a>
+                                                    <li class="mil-has-children">
+                                                        <a href="{% url 'service-page' %}">Services</a>
                                                     </li>
-                                                    <li class="mil-up">
+                                                    <li class="mil-has-children">
                                                         <a href="{% url 'contact-page' %}">Contact</a>
                                                     </li>
-                                                    <li class="mil-up">
+                                                    <li class="mil-has-children">
                                                         <a href="{% url 'blog-page' %}">Blog</a>
+                                                    </li>
+                                                    <li class="mil-has-children">
+                                                        <a href="{% url 'team-page' %}">Team</a>
                                                     </li>
                                                 </ul>
                                             </nav>
