--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,9 +1,7 @@
-
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} Contact {% endblock title %}
+{% block title %} Portfolio {% endblock title %}
 {% block content %}
-
 <body>
 
     <!-- wrapper -->
@@ -65,7 +63,7 @@
                                     <li class="mil-has-children ">
                                         <a href="{% url 'home-page' %}">Homepage</a>
                                     </li>
-                                    <li class="mil-has-children">
+                                    <li class="mil-has-children mil-active">
                                         <a href="{% url 'portfolio-page' %}">Portfolio</a>
                                     </li>
                                     <li class="mil-has-children">
@@ -77,7 +75,7 @@
                                     <li class="mil-has-children">
                                         <a href="{% url 'team-page' %}">Team</a>
                                     </li>
-                                    <li class="mil-has-children mil-active">
+                                    <li class="mil-has-children">
                                         <a href="{% url 'contact-page' %}">Contact</a>
                                     </li>
                                 </ul>
@@ -177,57 +175,73 @@
             <div id="swupMain" class="mil-main-transition">
 
                 <!-- banner -->
-                <div class="mil-inner-banner mil-p-0-120">
-                    <div class="mil-banner-content mil-center mil-up">
+                <div class="mil-inner-banner">
+                    <div class="mil-banner-content mil-up">
+                        <div class="mil-animation-frame">
+                            <div class="mil-animation mil-position-4 mil-dark mil-scale" data-value-1="6" data-value-2="1.4"></div>
+                        </div>
                         <div class="container">
-                            <ul class="mil-breadcrumbs mil-center mil-mb-60">
+                            <ul class="mil-breadcrumbs mil-mb-60">
                                 <li><a href="{% url 'home-page' %}">Homepage</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="portfolio-2.html">Portfolio</a></li>
                             </ul>
-                            <h1 class="mil-mb-60">Get in touch!</h1>
-                            <a href="#contact" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
-                                <span>Send message</span>
+                            <h1 class="mil-mb-60">Designing a <br> Better <span class="mil-thin">World Today</span></h1>
+                            <a href="#portfolio" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
+                                <span>Our works</span>
                             </a>
                         </div>
                     </div>
                 </div>
                 <!-- banner end -->
 
-                <!-- map -->
-                <div class="mil-map-frame mil-up">
-                    <div class="mil-map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1396.5769090312324!2d-73.6519672!3d45.5673453!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91f8abc30e0ff%3A0xfc6d9cbb49022e9c!2sManoir%20Saint-Joseph!5e0!3m2!1sen!2sua!4v1685485811069!5m2!1sen!2sua" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                </div>
-                <!-- map end -->
+                <!-- portfolio -->
+                <section id="portfolio">
+                    <div class="container mil-portfolio mil-p-120-60">
 
-                <!-- contact form -->
-                <section id="contact">
-                    <div class="container mil-p-120-90">
-                        <h3 class="mil-center mil-up mil-mb-120">Let's <span class="mil-thin">Talk</span></h3>
-                        <form action="{% url 'contact-page' %}" method="post" class="row align-items-center" >
-                            {% csrf_token %}
-                            <div class="col-lg-6 mil-up">
-                                <input type="text" placeholder="What's your name" name="name" required>
+                        <div class="mil-lines-place"></div>
+                        <div class="mil-lines-place mil-lines-long"></div>
+
+                        <div class="row justify-content-between align-items-end">
+                            {% for port in portfolios %}
+                            <div class="{{port.size}}">
+
+                                <a href="{{port.url}}" class="mil-portfolio-item mil-more mil-mb-60">
+                                    <div class="mil-cover-frame mil-hori mil-up">
+                                        <div class="mil-cover mil-scale" data-value-1="1.2" data-value-2="1">
+                                            <img src="{{port.image.url}}" alt="cover">
+                                        </div>
+                                    </div>
+                                    <div class="mil-descr">
+                                        <div class="mil-labels mil-up mil-mb-15">
+                                            <div class="mil-label mil-upper mil-accent">{{port.category}}</div>
+                                            <div class="mil-label mil-upper">{{port.date}}</div>
+                                        </div>
+                                        <h4 class="mil-up">{{port.title}}</h4>
+                                    </div>
+                                </a>
+
                             </div>
-                            <div class="col-lg-6 mil-up">
-                                <input type="email" placeholder="Your Email" name="email" required>
-                            </div>
-                            <div class="col-lg-12 mil-up">
-                                <textarea placeholder="Tell us about our project" name="content" required></textarea>
-                            </div>
-                            <div class="col-lg-8">
-                                <p class="mil-up mil-mb-30"><span class="mil-accent">*</span> We promise not to disclose your personal information to third parties.</p>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="mil-adaptive-right mil-up mil-mb-30">
-                                    <button type="submit" class="mil-button mil-arrow-place">
-                                        <span>Send message</span>
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
+                            {% endfor %}
+                        </div>
                     </div>
                 </section>
-                <!-- contact form end -->
+                <!-- portfolio end -->
+
+                <!-- call to action -->
+                <section class="mil-soft-bg">
+                    <div class="container mil-p-120-120">
+                        <div class="row">
+                            <div class="col-lg-10">
+
+                                <span class="mil-suptitle mil-suptitle-right mil-suptitle-dark mil-up">Looking to make your mark? We'll help you turn <br> your project into a success story.</span>
+
+                            </div>
+                        </div>
+                        <div class="mil-center">
+                            <h2 class="mil-up mil-mb-60">Ready to bring your <span class="mil-thin">ideas to</span> life? <br> We're <span class="mil-thin">here to help</span></h2>
+                            <div class="mil-up"><a href="contact.html" class="mil-button mil-arrow-place"><span>Contact us</span></a></div>
+                        </div>
+                    </div>
+                </section>
+                <!-- call to action end -->
                 {% endblock content %}
